# hdfs-mcp-server

./: .gitignore  README.md  mcp_config.json  mcp_config.json~  pyproject.toml
src/hdfs_mcp_server/: __init__.py  server.py
