[project]
name = "hdfs-mcp-server"
version = "0.1.0"
description = "MCP Server for Cloudera Agent Studio supporting HDFS, S3a, ADLS, and Ozone via RAZ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=0.1.0",
        "pyarrow>=14.0.0",
	]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The package lives under src/; hatchling ships all files inside it (including
# the bundled CA PEMs under cacerts/) in the wheel.
[tool.hatch.build.targets.wheel]
packages = ["src/hdfs_mcp_server"]

[project.scripts]
hdfs-mcp-server = "hdfs_mcp_server.server:main"